--- a/LukesBlog/Web.Debug.config
+++ b/LukesBlog/Web.Debug.config
@@ -27,4 +27,5 @@
       </customErrors>
     -->
   </system.web>
+  <connectionStrings configSource="connectionstring.Debug.config"/>
 </configuration>
