--- a/LukesBlog/Web.Release.config
+++ b/LukesBlog/Web.Release.config
@@ -28,4 +28,5 @@
       </customErrors>
     -->
   </system.web>
+  <connectionStrings configSource="connectionstring.Release.config"/>
 </configuration>
