--- a/LukesBlog/bower.json
+++ b/LukesBlog/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "myproject",
   "dependencies": {
-    "semantic-ui-button": "~2.2.13"
+    "semantic-ui-button": "~2.2.13",
+    "semantic-ui-icon": "~2.2.13"
   }
 }
