--- a/LukesBlog/Web.config
+++ b/LukesBlog/Web.config
@@ -74,4 +74,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings configSource="connectionstring.Debug.config"/>
 </configuration>
